--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.7.2"
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
