--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-localization": "0.1.7",
+    "react-redux": "5.0.6",
     "react-scripts": "1.1.1",
-    "redux": "^3.7.2"
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
