--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-localization": "0.1.7",
     "react-redux": "5.0.6",
     "react-scripts": "1.1.1",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "redux-persist": "5.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
